added Ann-Marie's comments

--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -26,7 +26,7 @@ Following @withlerGeneticallyBasedTargets2018, we recommend including only popul
 
 
 
-Specifically, @withlerGeneticallyBasedTargets2018 recommend the inclusion of integrated-wild for biological assessments under the WSP, and provisionally, integrated-transition populations (i.e., PNI  $\geqslant$ 0.5 ). Accordingly, only populations with PNI values $\geqslant$ 0.5 were included in the assessment of CU and SMU status here. Stricter definitions of hatchery enhancement can be considered by including only populations with PNI values $\geqslant$ 0.72. In practice, applying this stricter threshold for our case study on Chinook Salmon resulted in excluding most data since reliable time-series of PNI values and spawner abundances are only available for exploitation-rate indicator populations where coded-wire tags have been applied and sampled for recoveries, which tend to be populations with hatcheries. Adopting a threshold of $\geqslant$ 0.5, a level associated with most fish being natural origin, was the result of a trade-off between assessing remaining CU-level biodiversity and excluding significant hatchery impacts. For some populations, early periods of high enhancement can be removed from time-series and assessments can focus on recent periods without significant enhancement [@grantEvaluationUncertaintyFraser2011]. 
+Specifically, @withlerGeneticallyBasedTargets2018 recommend the inclusion of integrated-wild for biological assessments under the WSP, and provisionally, integrated-transition populations (i.e., PNI  $\geqslant$ 0.5 ). Accordingly, only populations with PNI values $\geqslant$ 0.5 were included in the assessment of CU and SMU status here. Stricter definitions of hatchery enhancement can be considered by including only populations with PNI values $\geqslant$ 0.72. In practice, applying this stricter threshold for our case study on Chinook Salmon resulted in excluding most data since reliable time-series of PNI values and spawner abundances are only available for exploitation-rate indicator populations where coded-wire tags have been applied and sampled for recoveries, which tend to be populations with hatcheries. Adopting a threshold of $\geqslant$ 0.5, a level associated with most fish being natural origin, was the result of a trade-off between assessing remaining CU-level biodiversity and excluding significant hatchery impacts. For some populations, early periods of high enhancement can be removed from time-series and assessments can focus on recent periods without significant enhancement [@grantEvaluationUncertaintyFraser2011]. For hatcheries aimed at rebuilding critically depleted populations, production may be dominated by hatchery-origin fish for a period until abundances are above lower conservation thresholds. Guidelines on the assessment and management of these conservation hatcheries are being developed by DFO's Salmonid Enhancement Program.
 
 
 Data used to assess hatchery contribution to spawning and estimate PNI values are associated with high uncertainties. The proportion of hatchery-origin spawners are determined from spawning ground surveys for thermal marks of hatchery-origin salmon. When data on thermal marking were not available, coded-wire tags (CWTs) were used to identify hatchery-origin spawners, but were associated with increased uncertainty. Large interannual variability in the proportion of hatchery-origin spawners can result from natural variability in survival of hatchery vs. natural-origin spawners, low sampling rates for hatchery-origin spawners, and high observation errors requiring decisions about temporal averaging. Here we averaged over the available time series where hatchery objectives have remained constant, though recommend further research quantifying the sources of uncertainties and evaluating the sensitivity of results to various time periods for averaging (e.g., recent generation vs. entire time period). 
@@ -117,7 +117,7 @@ When assessing CU status relative to abundance-based lower benchmarks, we use ge
 \item Proportional LRPs are calculated from the proportion of CUs within an SMU that are assessed as being above the Red status zone, with a default of 100% as the LRP
 \item Proportional LRPs are recommended as the default approach for estimating LRPS for Pacific salmon and triggering rebuilding plans under the *Fisheries Act*
 \item Advantages of proportional LRPs include that they are consistent with the established framework for status assessments under the WSP, they are easy to communicate, and the spatial scale of proportional LRPs can be easily adapted to match various management levers, from CU to regional scales.
-\item LRPs on the aggregate SMU-level abundances ('aggregate abundance LRPs') may be required for fisheries management decisions at the SMU scale, and are considered supplemental to proportional LRPs
+\item LRPs along a gradient of aggregate SMU-level abundances ('aggregate abundance LRPs') may be required for fisheries management decisions at the SMU scale, and are considered supplemental to proportional LRPs
 \item Two types of aggregate abundance LRPs are identified: logistic regression LRPs and projection LRPs. Both rely on the relationship between observed aggregate abundances and statuses of component CUs, but logistic regression LRPs rely on empirical data directly whereas projection LRPs are derived from projections of CU-level population dynamics usually parameterized from empirical data.  
 \item Both aggregate abundance LRPs are probabilistic in nature, identifying the aggregate abundances associated with an acceptable probability of all CUs achieving status above the Red zone
 \item An assumption of the logistic LRPs is that the relationship between aggregate abundance and CU-level status observed historically represents the current (and future) relationship. If the covariance among CUs or relative productivities and capacities of CUs is non-stationary, logistic regression LRPs may not represent serious harm under current or future conditions. 
@@ -142,7 +142,7 @@ Proportional LRPs are based on the best available information (Principle 1) by i
 A further advantage of this method is that it can easily be extended to other spatial scales under which Pacific salmon are managed. For example, CUs can be assessed individually when threats and responses are localized to specific watersheds, e.g., Cultus Sockeye which has unique threats to its spawning and rearing habitats. CU status can also be aggregated at various scales and across species when threats and responses are broader, e.g, for the management of numerous salmon species and CUs impacted by the Big Bar landslide reported in 2019.  
 
 
-In addition to proportional LRPs, we developed LRPs based on aggregate SMU-level abundance accounting for component CU-level statuses. These "aggregate abundance LRPs" may be required for fisheries management decisions at the SMU scale, but are considered supplemental to proportional LRPs for FSP purposes. We identified two types of aggregate abundance LRPs: (1) logistic regression-based LRPs, or simply, logistic regression LRPs and (2) projection-based, or simply projection LRPs (Fig. \@ref(fig:LRP-types)).  Both LRPs rely on the relationship between observed aggregate abundances and statuses of component CUs, but they differ in that logistic regression LRPs rely on empirical data directly whereas projection LRPs are derived from projections of CU-level population dynamics usually parameterized from empirical data.  Also, both LRPs are probabilistic in nature, identifying the aggregate abundances associated with an acceptable probability of all CUs achieving status above the Red zone. To an extent uncertainty in the underlying relationship between observed aggregate abundances and CU-level statuses is represented in the probabilistic nature of these LRPs; larger uncertainties result in higher LRP values and vice versa, with all else remaining equal.  
+In addition to proportional LRPs, we developed LRPs along a gradient of aggregate SMU-level abundance accounting for component CU-level statuses. These "aggregate abundance LRPs" may be required for fisheries management decisions at the SMU scale, but are considered supplemental to proportional LRPs for FSP purposes. We identified two types of aggregate abundance LRPs: (1) logistic regression-based LRPs, or simply, logistic regression LRPs and (2) projection-based, or simply projection LRPs (Fig. \@ref(fig:LRP-types)).  Both LRPs rely on the relationship between observed aggregate abundances and statuses of component CUs, but they differ in that logistic regression LRPs rely on empirical data directly whereas projection LRPs are derived from projections of CU-level population dynamics usually parameterized from empirical data.  Also, both LRPs are probabilistic in nature, identifying the aggregate abundances associated with an acceptable probability of all CUs achieving status above the Red zone. To an extent uncertainty in the underlying relationship between observed aggregate abundances and CU-level statuses is represented in the probabilistic nature of these LRPs; larger uncertainties result in higher LRP values and vice versa, with all else remaining equal.  
 <!--CH remove, as the sentence above captures this in a more nuanced way?: The reliability of aggregate-abundance LRPs to represent thresholds of serious harm at the CU level depend on the strength of the underlying relationship between aggregate abundance and CU statuses as inferred from observed data.--> 
 
 \begin{figure}[ht]
