--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -26,7 +26,7 @@ CW: CSASdown automatically capitalizes the titles and subtitles according to the
 
 
 
-We recommend a step-wise approach for identifying LRPs, with the proportion of component CUs with status above Red as the default method (Fig. \@ref(fig:flowchart)). This is the method recommended to meet the *Fisheries Act* requirement for LRPs, and can be applied to numerous aspects of salmon management, including hatchery, harvest, and habitat management. Aggregate abundance LRPs are presented as an option for cases in which they are required for fisheries management (e.g., local or international), but are considered supplemental to the proportion of CUs with status above Red. The step-wise approach presented below considers data availability for candidate LRP methods and provides guidance when inconsistencies in status occur from applying multiple LRP methods. These steps can be adapted in the future as more methods are developed and/or these methods are further evaluated. 
+We recommend a step-wise approach for identifying LRPs, with the proportion of component CUs with status above Red as the default method (Fig. \@ref(fig:flowchart)). This is the method recommended to meet the *Fisheries Act* requirement for LRPs, and can be applied to numerous aspects of salmon management, including hatchery, harvest, and habitat management. Aggregate abundance LRPs are presented as an option for cases in which they are required for fisheries management (e.g., local or international), but are considered supplemental to the proportion of CUs with status above Red. The step-wise approach presented below considers data availability for candidate LRP methods and provides guidance when inconsistencies in status occur from applying multiple LRP methods. These steps can be adapted in the future as more methods are developed and/or these methods are further evaluated. These steps were developed to be consistent with the principles described in Section \@ref(principles).
 
 
 \begin{figure}[ht]
@@ -109,12 +109,12 @@ In some cases, finer spatial scales than CU (e.g., watersheds or subpopulations 
 
 Distribution is a commonly cited component of salmon viability and recovery [@mcelhanyViableSalmonidPopulations2010]. When applied to the identification of recovery targets for Pacific salmon, @bradfordReviewBiologicalPrinciples2004 defined the relevant scale of distribution as spatial units that are demographically independent such that the  population dynamics of one unit are unlikely to affect the dynamics of another, but that genetic exchange is expected to occur at greater rates than observed among populations (CUs), and would likely exceed 10 effective migrants per generation. When applying these criteria to Interior Fraser River Coho salmon, @bradfordReviewBiologicalPrinciples2004 defined subpopulations on the basis of large watersheds or lakes, or partial barriers to migration. 
 
-We recommend that the decision on spatial scale of conservation for biological assessments be part of the peer-review process for CU and SMU assessments, and be based on biological principles of conservation and viability (e.g., as reviewed in @bradfordReviewBiologicalPrinciples2004 and @mcelhanyViableSalmonidPopulations2010). 
+We recommend that the decision on distribution and spatial scale of conservation for biological assessments be part of the peer-review process for CU and SMU assessments, and be based on biological principles of conservation and viability (e.g., as reviewed in @bradfordReviewBiologicalPrinciples2004 and @mcelhanyViableSalmonidPopulations2010). 
 
 
 Within this step, information on hatchery enhancement is used to identify populations where production is dominated by hatchery-origin fish.  Populations in which production is dominated by hatchery-origin fish (identified by PNI values < 0.5, or expert opinion when data on the proportion of hatchery-origin spawners are not available) are generally excluded from analyses, while those that are dominated by natural-origin fish (e.g., PNI values are $\geqslant$ 0.5), are generally included in analyses [@withlerGeneticallyBasedTargets2018]. Further, where time-series of the proportion of hatchery-origin salmon on the spawning grounds are available and production is dominated by natural-origin fish, these proportions can be used to generate time-series of natural-origin recruitment for benchmark estimation and natural-origin spawners for status assessment against benchmarks. When the influence of hatchery production is removed in this way, the assessments are less sensitive to the presence of hatcheries and annual variation in hatchery practices.  
 
-Infilling among streams or spawning sites for years with missing data is commonly used when compiling CU-level spawner abundance series [e.g., see @grantEvaluationUncertaintyFraser2011; @brown2020SummaryAbundance2020]. When infilled time series are used to estimate LRPs and monitor stock status relative to LRPs, consideration should be given to the scale at which infilling is done at. For example, if LRPs are based on maintaining CU-level (or inlet-level) diversity, infilling of missing data should not be based on escapements from outside of the CU (or inlet). In addition, hatchery enhancement should be carefully accounted for when infilling to avoid overestimating abundances when infilled numbers are based on sites that are artificially enhanced and when enhancement levels vary during the time series, to the extent possible. 
+Infilling among streams or spawning sites for years with missing data is commonly used when compiling CU-level spawner abundance series [e.g., see @grantEvaluationUncertaintyFraser2011; @brown2020SummaryAbundance2020]. When infilled time series are used to estimate LRPs and monitor stock status relative to LRPs, consideration should be given to the scale at which infilling is done at. If LRPs are based on maintaining CU-level (or inlet-level) diversity, infilling of missing data should generally not be based on escapements from outside of the CU (or inlet). Infilling among CUs increases uncertainty and may provide misleading status for the CU with being infilled, if the CUs actually diverge in status and trends (see Step 3). In addition, hatchery enhancement should be carefully accounted for when infilling to avoid overestimating abundances when infilled numbers are based on sites that are artificially enhanced and when enhancement levels vary during the time series, to the extent possible. 
 
 
 ### Step 2: Assessing CU Data Deficiency
@@ -140,9 +140,9 @@ Third, the extent to which status of data deficient CUs can be inferred from CUs
 Criteria & Rationale & Example characteristics & Example sources of information \\ 
 \hline
 \endhead
-Threats & CU-specific threats may impact survival rates, growth, and/or reproductive success and therefore statuses and trends & Ecosystem modifications including water extraction, forestry, fires,  agricultural land-use, and development, fishing, pollution, aquaculture, and genetic impacts from hatcheries & Published threats and habitat assessments by CU \\
+Threats & CU-specific threats may impact survival rates, growth, and/or reproductive success and therefore statuses and trends & Ecosystem modifications including water extraction, forestry, fires, agriculture, and development, fishing, pollution, aquaculture, and genetic impacts from hatcheries & Published threats and habitat assessments by CU \\
 Environmental conditions & CU-specific environmental or climatic conditions may impact survival, growth, maturation, or reproductive success and hence status and trends, either due to environmental drivers themselves or the interaction of different environments with common anthropogenic threats & Freshwater: river gradient, connectivity, macroclimate of spawning and rearing habitat; hydrological regime (e.g., (1) for Chinook Salmon). Marine: upwelling, currents, productivity of nearshore environment at ocean entry & Distribution of Freshwater and and Marine Adaptive Zones (2), biogeolclimatic zones describing macroclimates, as in (3), habitat characteristics provided in CU-specific stock assessments, traditional knowledge\\
-Life-history characteristics & CUs with the same life-history characteristics such as age at ocean entry are more likely to overlap in spatial and temporal distribution and therefore respond similarly to common threats and environmental drivers compared to those with divergent characteristics & Life-history type (stream vs ocean for Chinook Salmon), age-at-ocean entry, age-at-return & CU-specific biological information from stock assessments, traditional knowledge \\
+Life-history characteristics & CUs with the same life-history characteristics such as age at ocean entry are more likely to overlap in spatial and temporal distribution and therefore respond similarly to common threats and environmental drivers compared to those with divergent characteristics & Life-history type (stream vs ocean for Chinook Salmon), age-at-ocean entry, age-at-return, migration timing & CU-specific biological information from stock assessments, traditional knowledge \\
 Population capacity & Population size is related to the probability of dropping below critical conservation thresholds and hence vulnerability to threats and/or random perturbations & Spawner abundances & CU-specific biological information from stock assessments, watershed size (4), traditional knowledge\\
 \hline
 (\#tab:CUrepres)
@@ -310,7 +310,7 @@ The frequency of SMU-scale peer reviews outside of the annual implementation of 
 
 Although proportional LRPs may meet requirements under the Fish Stock provisions for Pacific salmon, abundance-based LRPs may be needed for fisheries management decisions (see Section \@ref(roleLRPs)).  For SMUs where harvest at the aggregate scale is a dominant driver of population dynamics and restricting fisheries harvest is a principle lever, an LRP along the metric of aggregate abundances of the SMU may support precautionary management. For example, when LRPs are used to inform a harvest control rule, fishing pressure can be gradually curtailed as aggregate abundances drop towards the LRP to avoid depletion below it. Aggregate abundance-based benchmarks may in some cases be required for local or international management. For example, for Nass and Skeena Sockeye aggregate escapement goals are required under the Pacific Salmon Treaty provisions (2019) <!--@TreatyGovernmentCanada2019 . Have to figure out how to reference this without having the full name of the treaty here-->, however to meet WSP objectives, the aggregate escapement goal must consider CU-level diversity. 
 
-However, when LRPs are defined within the context of a Management Procedure framework (see Section \@ref(intro)), then an aggregate abundance LRP may not be required if the framework can demonstrate the probability of individual CUs having status above Red for various management options. For Pacific salmon, management procedures extend beyond harvest control rules to include time-area closures, habitat enhancement or hatchery supplementation to protect individual CUs. Therefore, the choice to develop an aggregate abundance LRP depends on the decision context, and should be made in collaboration with various sectors responsible for management decisions within the SMU. If aggregate abundance LRPs are not required, assessment of the SMU would be provided from steps 1-6. The following steps (7-9) are relevant if aggregate abundance LRPs are required, and build on proportional LRPs derived in the previous steps. Uncertainties introduced by the inclusion of models to relate aggregate abundances to CU-level statuses should be considered when choosing LRP methods (Principle 5 in Section \@ref(principles)). 
+However, when LRPs are defined within the context of a Management Procedure framework (see Section \@ref(intro)), then an aggregate abundance LRP may not be required if the framework can demonstrate the probability of individual CUs having status above Red for various management options. For Pacific salmon, management procedures extend beyond harvest control rules to include time-area closures, gear restrictions, habitat enhancement or hatchery supplementation to protect individual CUs. Therefore, the choice to develop an aggregate abundance LRP depends on the decision context, and should be made in collaboration with various sectors responsible for management decisions that affect the SMU. If aggregate abundance LRPs are not required, assessment of the SMU would be provided from steps 1-6. The following steps (7-9) are relevant if aggregate abundance LRPs are required, and build on proportional LRPs derived in the previous steps. Uncertainties introduced by the inclusion of models to relate aggregate abundances to CU-level statuses should be considered when choosing LRP methods (Principle 5 in Section \@ref(principles)). 
 
 
 In the context described here, aggregate abundance LRPs are scientifically derived quantities that delineate serious harm to an SMU following the principles outlined in Section \@ref(principles). In particular, aggregate abundance LRPs are defined to be consistent with the WSP objective of maintaining biodiversity at the scale of CUs.  Although these LRPs can inform harvest control rules, harvest management decisions require consideration of multiple objectives beyond those associated with conservation and serious harm (e.g., socioeconomic objectives). 
@@ -324,7 +324,7 @@ In the context described here, aggregate abundance LRPs are scientifically deriv
 **What is an Acceptable Probability of CU Statuses Being Above Red?**
 
 
-To define aggregate abundance LRPs, first, an acceptable probability of having all component CU statuses above Red is identified. While a 100% or nearly 100% probability of all component CUs being above Red may be desirable from a conservation perspective, inherent uncertainties in population dynamics make this choice impractical. Often, LRPs above the highest observed aggregate spawner abundances are required to achieve a near 100% probability of components being above Red status. Instead, we recommend applying a probability of at least 50% of all CUs being above Red status to align with WSP objectives. We provide LRPs associated with four probabilities, 50%, 66%, 90%, and 99% (where analytically possible) derived from categories of likelihoods used by the International Panel on Climate Change [@mastrandreaGuidanceNoteLead2010] (Table \@ref(tab:LikelihoodsIPCC)), instead of specifying a single probability because we could not identify a scientific basis for the choice). 
+To define aggregate abundance LRPs, first, an acceptable probability of having all component CU statuses above Red is identified. While a 100% or nearly 100% probability of all component CUs being above Red may be desirable from a conservation perspective, inherent uncertainties in population dynamics make this choice impractical. Often, LRPs above the highest observed aggregate spawner abundances are required to achieve a near 100% probability of components being above Red status. Instead, we recommend applying a probability of at least 50% of all CUs being above Red status to align with WSP objectives. We provide LRPs associated with four probabilities, 50%, 66%, 90%, and 99% (where analytically possible) derived from categories of likelihoods used by the International Panel on Climate Change [@mastrandreaGuidanceNoteLead2010] (Table \@ref(tab:LikelihoodsIPCC)), instead of specifying a single probability because we could not identify a scientific basis for the choice). We distinguish the probability of *all* CUs being above Red from the proportion of CUs above Red (identified as 100% in Step 4). Both proportional and aggregate abundance LRPs indicate when all CUs are above Red, but aggregate abundance LRPs assign a probability to this occurrence.
 
 
 \renewcommand*{\arraystretch}{1.6}
