--- a/guidelinesWP/10-appendixCaseStudies.Rmd
+++ b/guidelinesWP/10-appendixCaseStudies.Rmd
@@ -117,5 +117,5 @@ The ISC Chum SMU is considered data-limited. While escapement series are availab
 For this case study, we consider two approaches for characterizing CU status: (1) the Pacific Salmon Status Scanner and (2) a single-metric on spawner abundances using percentile-based benchmarks. We applied both the proportional LRP and logistic-regression based LRPs to this case study and evaluated the sensitivity of SMU-level status from proportional LRPs to various data inputs. Because of poor fit of the logistic regression as shown by model diagnostics, were we not able to generate reliable logistic regression LRPs for this SMU.
 
 
-We found that assessments based on the Pacific Salmon Status Scanner gave identical results as the single-metric on spawner abundances relative to percentile-based benchmarks. Also, as for Interior Fraser River Coho, increasing the number of CUs included in analyses resulted in more pessimistic statuses relative to the LRP, never more optimistic. Further, the case study demonstrates that SMU status can be below the LRP even if the aggregate abundances are increasing.
+We found that assessments based on the Pacific Salmon Status Scanner gave identical results as the single-metric on spawner abundances relative to percentile-based benchmarks. Also, as for Interior Fraser River Coho, increasing the number of CUs included in analyses resulted in more pessimistic statuses relative to the LRP, never more optimistic. Further, the case study demonstrates that SMU status can be below the LRP even if the aggregate abundances are increasing. More details are provided in Holt et al. (In review).
 
